# fastapi-mdc-logger

./: .gitignore  Readme.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: health.py  user.py
app/core/: database.py  logging.py  settings.py
app/middlewares/: mdc_middleware.py  profiler_middleware.py
app/models/: user.py
app/repositories/: user_repo.py
app/services/: health_service.py  user_service.py
app/utils/: mdc.py
