[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-mdc-logger"
version = "0.1.0"
description = "FastAPI project with async-safe MDC logging using contextvars"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Janardhan Singh" }
]

# ---- Runtime dependencies ----
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.40.0",
]

# ---- Optional / dev dependencies ----
[project.optional-dependencies]
dev = [
    "black[d]>=25.1.0",
    "ruff>=0.4.0",
    "pytest>=8.0.0"
]

# ---- Entry point (optional, but nice) ----
[project.scripts]
fastapi-mdc-logger = "app.main:app"

# ---- uv configuration ----
[tool.uv]
package = false

# ---- Black configuration ----
[tool.black]
line-length = 120
target-version = ["py310"]

# ---- Ruff configuration ----
[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

# ---- Pytest configuration ----
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
